# zanshin

./: CMakeLists.txt
attic/src/: CMakeLists.txt
attic/src/app/: kontact_plugin.h
attic/src/core/: akonadidatastore.cpp  akonadidatastore.h  datastoreinterface.h  pimitemmodel.cpp  pimitemservices.cpp  projectstrategy.cpp  structurecachestrategy.cpp
attic/src/gui/itemeditor/: attachmentsviewer.cpp  itemeditor.cpp  itemeditor.h
attic/src/gui/itemlist/: itemselectorproxy.cpp
attic/src/icons/: CMakeLists.txt
attic/tests/testlib/: mockdatastore.cpp  mockdatastore.h
src/akonadi/: CMakeLists.txt  akonadiapplicationselectedattribute.h  akonadiartifactqueries.h  akonadicollectionfetchjobinterface.h  akonadicontextqueries.h  akonadidatasourcequeries.h  akonadiitemfetchjobinterface.h  akonadinoterepository.cpp  akonadinoterepository.h  akonadiprojectqueries.h  akonadiserializer.cpp  akonadiserializerinterface.h  akonadistorage.cpp  akonadistorage.h  akonadistorageinterface.h  akonaditagqueries.h  akonaditaskqueries.h  akonaditaskrepository.cpp  akonaditaskrepository.h  akonaditimestampattribute.h
src/app/: CMakeLists.txt  aboutdata.cpp  main.cpp
src/domain/: CMakeLists.txt
src/kontact/: CMakeLists.txt  kontact_plugin.cpp  kontact_plugin.h  part.cpp
src/migrator/: CMakeLists.txt  zanshin021migrator.h
src/presentation/: CMakeLists.txt  metatypes.h
src/runner/: CMakeLists.txt  zanshinrunner.cpp  zanshinrunner.h
src/utils/: CMakeLists.txt
src/widgets/: CMakeLists.txt  availablesourcesview.cpp  editorview.cpp  editorview.h
tests/: CMakeLists.txt
tests/features/: CMakeLists.txt
tests/features/step_definitions/: CMakeLists.txt  main.cpp
tests/manual/: tasklister.cpp  tasktreeviewer.cpp
tests/testlib/: CMakeLists.txt  MacroAkonadiAutoTests.cmake  akonadidebug.cpp  akonadifakedata.h  gencollection.cpp  gennote.h  gentodo.cpp  gentodo.h
tests/units/akonadi/: akonadicontextqueriestest.cpp  akonadinoterepositorytest.cpp  akonadiserializertest.cpp  akonadistoragetest.cpp  akonaditaskrepositorytest.cpp
tests/units/migrator/: zanshin021migrationtest.cpp
tests/units/testlib/: akonadifakedatatest.cpp  gencollectiontest.cpp  monitorspytest.cpp
tests/units/widgets/: editorviewtest.cpp
